[tool.poetry]
name = "tower-defence"
version = "0.1.0"
description = ""
authors = ["Ying Liqian <jamesylq@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
