[tool.poetry]
name = "tower-defense"
version = "1.6.5"
description = ""
authors = ["Ying Liqian <jamesylq@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tower-defense = "tower_defense.main:app"